# misc-rust

./: Cargo.toml
src/: auto_sample_pass.rs  digest.rs  main.rs  password_hasher.rs  self_sampled.rs
