[package]
name = "crypto"
version = "0.1.0"
authors = ["Jytesh <44925963+Jytesh@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.3.2"
ring = "0.16.20"
bcrypt = "0.8"
progress = "0.2.0"
